# PanTronic

./: .gitignore  CMakeLists.txt  Documentation.md  LICENSE  README.md
src/: ADSRComponent.cpp  ADSRComponent.hpp  ChorusComponent.cpp  ChorusComponent.hpp  ChorusEffect.cpp  ChorusEffect.hpp  MysticalLookAndFeel.cpp  MysticalLookAndFeel.hpp  PluginEditor.cpp  PluginEditor.hpp  PluginProcessor.cpp  PluginProcessor.hpp  ReverbComponent.cpp  ReverbComponent.hpp  SpectrumComponent.cpp  SpectrumComponent.hpp  Utils.hpp  WaveformComponent.cpp  WaveformComponent.hpp
